nav bar on mobile devices fixed

--- a/src/components/nav-bar/nav-bar.less
+++ b/src/components/nav-bar/nav-bar.less
@@ -9,6 +9,14 @@
     margin-left: 0.5em;
   }
 
+  @media only screen and (max-width: 992px) {
+    .brand-logo {
+      left: 0;
+      -webkit-transform: translateX(0);
+      transform: translateX(0);
+    }
+  }
+
   ul {
     li {
       a {
